Added comment and Update hover effect in menu

--- a/index.html
+++ b/index.html
@@ -40,26 +40,30 @@
     </script>
 </head>
 <body>
+    <!-- header  -->
     <header class="py-5 px-5">
         <div class="max-w-[1170px] mx-auto">
             <div class="flex items-center">
+                <!-- brands logo  -->
                 <a href="#" class="grow">
                     <img src="./images/logo2.png" alt="">
                 </a>
+                <!-- nav menu  -->
                 <div class="hidden md:block">
                     <ul class="flex grow text-dark3 space-x-8 justify-center">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Service
+                        <li><a href="#" class="hover:text-primary">Home</a></li>
+                        <li><a href="#" class="hover:text-primary">Service
                             <i class="fa-classic fa-solid fa-angle-right fa-fw"></i>
                         </a></li>
-                        <li><a href="#">Cases
+                        <li><a href="#" class="hover:text-primary">Cases
                             <i class="fa-classic fa-solid fa-angle-right fa-fw"></i></a></li>
-                        <li><a href="#">Blog
+                        <li><a href="#" class="hover:text-primary">Blog
                             <i class="fa-classic fa-solid fa-angle-right fa-fw"></i></a></li>
-                        <li><a href="#">Contact Us
+                        <li><a href="#" class="hover:text-primary">Contact Us
                             <i class="fa-classic fa-solid fa-angle-right fa-fw"></i></a></li>
                     </ul>
                 </div>
+                <!-- nav button  -->
                 <div class="grow flex justify-end items-center">
                     <button type="button" class="font-semibold bg-primary text-white py-[12px] px-[18px] mr-3 md:mr-0 md:py-[18px] md:px-[29px] rounded-lg sm:block hidden hover:shadow-md hover:bg-white hover:text-primary border-[1px] border-transparent hover:border-primary duration-300">Free Consultation</button>
                     <div class="md:hidden block">
