--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
                     'poppins': ["Poppins", 'serif'],
                     'garamond': ["EB Garamond", 'serif'],
                 },
+                backgroundImage: {
+                    'banner': "linear-gradient(to top, rgba(0,0,0), transparent), url('./images/banner.png')",
+                },
                 }
             }
         }
     </script>
 </head>
-<body>
+<body class="font-poppins">
     <!-- header  -->
     <header class="py-5 px-5">
         <div class="max-w-[1170px] mx-auto">
@@ -75,5 +78,20 @@
             </div>
         </div>
     </header>
+    <!-- main  -->
+    <main class="px-5 mt-3">
+        <div class="max-w-[1170px] mx-auto">
+            <div class="bg-banner bg-no-repeat bg-center bg-cover py-[104px] rounded-lg ">
+                <div class="px-4 md:px-0 md:w-4/6 mx-auto text-center space-y-8">
+                    <h2 class="text-4xl md:text-5xl lg:text-7xl font-bold text-white font-garamond">We Provide Effective Legal Solutions</h2>
+                    <p class="text-[16px] text-dark6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <div class="flex md:flex-row flex-col gap-x-5 gap-y-2 md:items-center">
+                        <input type="search" class="grow rounded-lg py-[12px] md:py-0 px-8 focus:outline-none self-stretch" name="search" id="" placeholder="search your service">
+                        <button type="button" class="font-semibold bg-primary text-white py-[12px] px-[18px] mr-3 md:mr-0 md:py-[18px] md:px-[29px] rounded-lg hover:shadow-md hover:bg-white hover:text-primary border-[1px] border-transparent hover:border-primary duration-300">Search</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
