Develop Legal Area Section with full responsive

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     </header>
     <!-- main  -->
     <main class="px-5 mt-3">
+        <!-- Bannar Section -->
         <div class="max-w-[1170px] mx-auto">
             <div class="bg-banner bg-no-repeat bg-center bg-cover py-[104px] rounded-lg ">
                 <div class="px-4 md:px-0 md:w-4/6 mx-auto text-center space-y-8">
@@ -92,6 +93,112 @@
                 </div>
             </div>
         </div>
+        
+        <!-- Legal Area -->
+        <section class="my-28 px-5">
+            <div class="max-w-[1170px] mx-auto">
+                <!-- legal title  -->
+                <div class="text-center">
+                    <h1 class="text-2xl md:text-4xl text-dark2 text-garamond font-semibold">The Legal Practice Area</h1>
+                    <p class="text-[16px] text-dark3 md:w-3/5 mx-auto mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                </div>
+
+                <!-- legal card  -->
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-y-3 md:gap-y-0-0 mt-16">
+                    <!-- card  -->
+                    <div class="text-center pt-[56px] pb-[70px] px-[65px] border md:border-l-transparent md:border-t-transparent">
+                        <img src="./images/business.png" class="mx-auto" alt="">
+                        <div class="mt-10">
+                            <h1 class="text-3xl text-dark2 font-semibold text-garamond">Business Law</h1>
+                            <p class="text-[16px] text-dark3 my-5 leading-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                            <div>
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 mx-auto bg-primary text-white font-extrabold hover:bg-transparent hover:text-black border-[1px] hover:border-dark3 w-[40px] h-[40px] p-3 rounded-full">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- card  -->
+                    <div class="text-center pt-[56px] pb-[70px] px-[65px] border md:border-t-transparent">
+                        <img src="./images/business.png" class="mx-auto" alt="">
+                        <div class="mt-10">
+                            <h1 class="text-3xl text-dark2 font-semibold text-garamond">Business Law</h1>
+                            <p class="text-[16px] text-dark3 my-5 leading-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                            <div>
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 mx-auto bg-primary text-white font-extrabold hover:bg-transparent hover:text-black border-[1px] hover:border-dark3 w-[40px] h-[40px] p-3 rounded-full">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- card  -->
+                    <div class="text-center pt-[56px] pb-[70px] px-[65px] border md:border-t-transparent md:border-r-transparent">
+                        <img src="./images/business.png" class="mx-auto" alt="">
+                        <div class="mt-10">
+                            <h1 class="text-3xl text-dark2 font-semibold text-garamond">Business Law</h1>
+                            <p class="text-[16px] text-dark3 my-5 leading-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                            <div>
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 mx-auto bg-primary text-white font-extrabold hover:bg-transparent hover:text-black border-[1px] hover:border-dark3 w-[40px] h-[40px] p-3 rounded-full">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- card  -->
+                    <div class="text-center pt-[56px] pb-[70px] px-[65px] border md:border-l-transparent md:border-b-transparent">
+                        <img src="./images/business.png" class="mx-auto" alt="">
+                        <div class="mt-10">
+                            <h1 class="text-3xl text-dark2 font-semibold text-garamond">Business Law</h1>
+                            <p class="text-[16px] text-dark3 my-5 leading-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                            <div>
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 mx-auto bg-primary text-white font-extrabold hover:bg-transparent hover:text-black border-[1px] hover:border-dark3 w-[40px] h-[40px] p-3 rounded-full">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- card  -->
+                    <div class="text-center pt-[56px] pb-[70px] px-[65px] border md:border-b-transparent">
+                        <img src="./images/business.png" class="mx-auto" alt="">
+                        <div class="mt-10">
+                            <h1 class="text-3xl text-dark2 font-semibold text-garamond">Business Law</h1>
+                            <p class="text-[16px] text-dark3 my-5 leading-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                            <div>
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 mx-auto bg-primary text-white font-extrabold hover:bg-transparent hover:text-black border-[1px] hover:border-dark3 w-[40px] h-[40px] p-3 rounded-full">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- card  -->
+                    <div class="text-center pt-[56px] pb-[70px] px-[65px] border md:border-b-transparent md:border-r-transparent">
+                        <img src="./images/business.png" class="mx-auto" alt="">
+                        <div class="mt-10">
+                            <h1 class="text-3xl text-dark2 font-semibold text-garamond">Business Law</h1>
+                            <p class="text-[16px] text-dark3 my-5 leading-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                            <div>
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 mx-auto bg-primary text-white font-extrabold hover:bg-transparent hover:text-black border-[1px] hover:border-dark3 w-[40px] h-[40px] p-3 rounded-full">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
