Delete bannar section button margin right

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <p class="text-[16px] text-dark6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                     <div class="flex md:flex-row flex-col gap-x-5 gap-y-2 md:items-center">
                         <input type="search" class="grow rounded-lg py-[12px] md:py-0 px-8 focus:outline-none self-stretch" name="search" id="" placeholder="search your service">
-                        <button type="button" class="font-semibold bg-primary text-white py-[12px] px-[18px] mr-3 md:mr-0 md:py-[18px] md:px-[29px] rounded-lg hover:shadow-md hover:bg-white hover:text-primary border-[1px] border-transparent hover:border-primary duration-300">Search</button>
+                        <button type="button" class="font-semibold bg-primary text-white py-[12px] px-[18px] md:mr-0 md:py-[18px] md:px-[29px] rounded-lg hover:shadow-md hover:bg-white hover:text-primary border-[1px] border-transparent hover:border-primary duration-300">Search</button>
                     </div>
                 </div>
             </div>
