Update padding x value

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <!-- card  -->
-                    <div class="text-center pt-[56px] pb-[70px] px-[65px] border lg:border-t-transparent">
+                    <div class="text-center pt-[56px] pb-[70px] px-[10px] md:px-[65px]  border lg:border-t-transparent">
                         <img src="./images/criminal.png" class="mx-auto" alt="">
                         <div class="mt-10">
                             <h1 class="text-3xl text-dark2 font-semibold text-garamond">Criminal Law</h1>
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <!-- card  -->
-                    <div class="text-center pt-[56px] pb-[70px] px-[65px] border lg:border-t-transparent lg:border-r-transparent">
+                    <div class="text-center pt-[56px] pb-[70px] px-[10px] md:px-[65px]  border lg:border-t-transparent lg:border-r-transparent">
                         <img src="./images/child.png" class="mx-auto" alt="">
                         <div class="mt-10">
                             <h1 class="text-3xl text-dark2 font-semibold text-garamond">Child Support</h1>
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                     <!-- card  -->
-                    <div class="text-center pt-[56px] pb-[70px] px-[65px] border lg:border-l-transparent lg:border-b-transparent">
+                    <div class="text-center pt-[56px] pb-[70px] px-[10px] md:px-[65px]  border lg:border-l-transparent lg:border-b-transparent">
                         <img src="./images/education.png" class="mx-auto" alt="">
                         <div class="mt-10">
                             <h1 class="text-3xl text-dark2 font-semibold text-garamond">Education Law</h1>
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                     <!-- card  -->
-                    <div class="text-center pt-[56px] pb-[70px] px-[65px] border lg:border-b-transparent">
+                    <div class="text-center pt-[56px] pb-[70px] px-[10px] md:px-[65px]  border lg:border-b-transparent">
                         <img src="./images/divorce.png" class="mx-auto" alt="">
                         <div class="mt-10">
                             <h1 class="text-3xl text-dark2 font-semibold text-garamond">Divorce Law</h1>
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                     <!-- card  -->
-                    <div class="text-center pt-[56px] pb-[70px] px-[65px] border lg:border-b-transparent lg:border-r-transparent">
+                    <div class="text-center pt-[56px] pb-[70px] px-[10px] md:px-[65px]  border lg:border-b-transparent lg:border-r-transparent">
                         <img src="./images/tax.png" class="mx-auto" alt="">
                         <div class="mt-10">
                             <h1 class="text-3xl text-dark2 font-semibold text-garamond">Tax Law</h1>
