--- a/index.html
+++ b/index.html
@@ -282,6 +282,95 @@
                 </div>
             </div>
         </section>
+
+        <!-- FAQ section -->
+        <section class="my-28">
+            <div class="max-w-[1170px] mx-auto">
+                <!-- FAQ title  -->
+                <div class="text-center mb-16">
+                    <h1 class="text-2xl md:text-4xl text-dark2 text-garamond font-semibold">Frequently Asked Any Questions</h1>
+                    <p class="text-[16px] text-dark3 md:w-3/5 mx-auto mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                </div>
+
+                <div class="flex flex-col-reverse md:flex-row gap-y-10">
+                    <!-- FAQ According -->
+                    <div class="basis-1/2 flex flex-col justify-center">
+                        <div id="accordion-open" data-accordion="open">
+                            
+                            <!-- Accroding 1  -->
+                            <h2 id="accordion-open-heading-1">
+                            <button type="button" class="flex items-center justify-between w-full p-5 font-medium rtl:text-right text-gray-500 focus:text-gray-700 border border-gray-200 rounded-xl gap-3 bg-gray-300" data-accordion-target="#accordion-open-body-1" aria-expanded="true" aria-controls="accordion-open-body-1">
+                                <span class="flex items-center">1. Are application fee waivers available?</span>
+                                <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+                                </svg>
+                            </button>
+                            </h2>
+
+                            <div id="accordion-open-body-1" class="hidden mt-2" aria-labelledby="accordion-open-heading-1">
+                            <div class="p-5 border border-gray-200 bg-gray-100">
+                                <p class="mb-2 text-dark2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                            </div>
+                            </div>
+
+                            <!-- Accroding 2  -->
+                            <h2 id="accordion-open-heading-2" class="mt-3">
+                            <button type="button" class="flex items-center justify-between w-full p-5 font-medium rtl:text-right text-gray-700 border border-gray-200 rounded-xl gap-3 bg-gray-300" data-accordion-target="#accordion-open-body-2" aria-expanded="false" aria-controls="accordion-open-body-2">
+                                <span class="flex items-center">2. Are application fee waivers available?</span>
+                                <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+                                </svg>
+                            </button>
+                            </h2>
+
+                            <div id="accordion-open-body-2" class="hidden mt-2" aria-labelledby="accordion-open-heading-2">
+                            <div class="p-5 border border-gray-200 bg-gray-100">
+                                <p class="mb-2 text-dark2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                            </div>
+                            </div>
+
+                            <!-- Accroding 3  -->
+                            <h2 id="accordion-open-heading-3" class="mt-3">
+                            <button type="button" class="flex items-center justify-between w-full p-5 font-medium rtl:text-right text-gray-700 border border-gray-200 rounded-xl gap-3 bg-gray-300" data-accordion-target="#accordion-open-body-3" aria-expanded="false" aria-controls="accordion-open-body-3">
+                                <span class="flex items-center">3. Are application fee waivers available?</span>
+                                <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+                                </svg>
+                            </button>
+                            </h2>
+
+                            <div id="accordion-open-body-3" class="hidden mt-2" aria-labelledby="accordion-open-heading-3">
+                            <div class="p-5 border border-gray-200 bg-gray-100">
+                                <p class="mb-2 text-dark2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                            </div>
+                            </div>
+                            
+                            <!-- Accroding 4  -->
+                            <h2 id="accordion-open-heading-4" class="mt-3">
+                            <button type="button" class="flex items-center justify-between w-full p-5 font-medium rtl:text-right text-gray-700 border border-gray-200 rounded-xl gap-3 bg-gray-300" data-accordion-target="#accordion-open-body-4" aria-expanded="false" aria-controls="accordion-open-body-4">
+                                <span class="flex items-center">4. Are application fee waivers available?</span>
+                                <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+                                </svg>
+                            </button>
+                            </h2>
+
+                            <div id="accordion-open-body-4" class="hidden mt-2" aria-labelledby="accordion-open-heading-4">
+                            <div class="p-5 border border-gray-200 bg-gray-100">
+                                <p class="mb-2 text-dark2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                            </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <!-- FAQ Image  -->
+                    <div class="grow flex items-center justify-center">
+                        <img src="./images/faq.png" class="w-[80%]" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
