--- a/index.html
+++ b/index.html
@@ -371,6 +371,68 @@
                 </div>
             </div>
         </section>
+
+        <!-- Contact Section  -->
+        <section class="my-28">
+            <div class="max-w-[1170px] mx-auto">
+                <!-- contact title  -->
+                <div class="text-center mb-16">
+                    <h1 class="text-2xl md:text-4xl text-dark2 text-garamond font-semibold">Contact With Us</h1>
+                    <p class="text-[16px] text-dark3 md:w-3/5 mx-auto mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                </div>
+
+                <div class="flex flex-col md:flex-row md:gap-0 gap-10">
+                    <!-- contact left  -->
+                    <div class="basis-1/2 flex items-center">
+                        <div class="grid grid-cols-2 gap-1">
+                            <!-- card  -->
+                            <div class="p-7 text-center bg-gray-200 space-y-2 border border-gray-300">
+                                <img src="./images/address.png" class="mx-auto" alt="">
+                                <h3 class="text-dark2 font-semibold">Address</h3>
+                                <p class="text-dark3 text-xs md:text-sm">A108 Adam Street, New York, NY 535022</p>
+                            </div>
+                            <!-- card  -->
+                            <div class="p-7 text-center bg-gray-200 space-y-2 border border-gray-300">
+                                <img src="./images/call.png" class="mx-auto" alt="">
+                                <h3 class="text-dark2 font-semibold">Call Us</h3>
+                                <p class="text-dark3 text-xs md:text-sm">+88 01750 00 00 00<br>+88 01750 00 00 00</p>
+                            </div>
+                            <!-- card  -->
+                            <div class="p-7 text-center bg-gray-200 space-y-2 border border-gray-300">
+                                <img src="./images/email.png" class="mx-auto" alt="">
+                                <h3 class="text-dark2 font-semibold">Email Us</h3>
+                                <p class="text-dark3 text-xs md:text-sm">info@gmail.com info@gmail.com</p>
+                            </div>
+                            <!-- card  -->
+                            <div class="p-7 text-center bg-gray-200 space-y-2 border border-gray-300">
+                                <img src="./images/time.png" class="mx-auto" alt="">
+                                <h3 class="text-dark2 font-semibold">Working Hours</h3>
+                                <p class="text-dark3 text-xs md:text-sm">Mon-Fri: 9AM to 5PM<br>Sunday: 9AM to 1 PM</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- contact right -->
+                    <div class="grow flex flex-col justify-center">
+                        <form class="md:px-5 lg:px-16">
+                            <div class="mb-5">
+                                <input type="name" id="name" class="shadow-xs bg-gray-200 border border-gray-300 text-black text-sm rounded-sm focus:outline-none focus:border-primary block w-full p-2.5" placeholder="Enter your name" required />
+                            </div>
+                            <div class="mb-5">
+                            <input type="email" id="email" class="shadow-xs bg-gray-200 border border-gray-300 text-black text-sm rounded-sm focus:border-primary block w-full p-2.5" placeholder="Enter your email" required />
+                            </div>
+                            <div class="mb-5">
+                            <input type="text" id="text" class="shadow-xs bg-gray-200 border border-gray-300 text-black text-sm rounded-sm focus:border-primary block w-full p-2.5" placeholder="Subject" required />
+                            </div>
+                            <div class="mb-5">
+                            <textarea type="textarea" id="textarea" rows="5" class="shadow-xs bg-gray-200 border border-gray-300 text-black text-sm rounded-sm focus:border-primary block w-full p-2.5" placeholder="Enter your message" required></textarea>
+                            </div>
+
+                            <button type="submit" class="text-white bg-primary w-full focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-sm text-sm px-5 py-2.5 text-center">Send Your Message</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
