Update padding for responsive in contact left section

--- a/index.html
+++ b/index.html
@@ -386,25 +386,25 @@
                     <div class="basis-1/2 flex items-center">
                         <div class="grid grid-cols-2 gap-1">
                             <!-- card  -->
-                            <div class="p-7 text-center bg-gray-200 space-y-2 border border-gray-300">
+                            <div class="p-2 md:p-7 text-center bg-gray-200 space-y-2 border border-gray-300">
                                 <img src="./images/address.png" class="mx-auto" alt="">
                                 <h3 class="text-dark2 font-semibold">Address</h3>
                                 <p class="text-dark3 text-xs md:text-sm">A108 Adam Street, New York, NY 535022</p>
                             </div>
                             <!-- card  -->
-                            <div class="p-7 text-center bg-gray-200 space-y-2 border border-gray-300">
+                            <div class="p-2 md:p-7 text-center bg-gray-200 space-y-2 border border-gray-300">
                                 <img src="./images/call.png" class="mx-auto" alt="">
                                 <h3 class="text-dark2 font-semibold">Call Us</h3>
                                 <p class="text-dark3 text-xs md:text-sm">+88 01750 00 00 00<br>+88 01750 00 00 00</p>
                             </div>
                             <!-- card  -->
-                            <div class="p-7 text-center bg-gray-200 space-y-2 border border-gray-300">
+                            <div class="p-2 md:p-7 text-center bg-gray-200 space-y-2 border border-gray-300">
                                 <img src="./images/email.png" class="mx-auto" alt="">
                                 <h3 class="text-dark2 font-semibold">Email Us</h3>
                                 <p class="text-dark3 text-xs md:text-sm">info@gmail.com info@gmail.com</p>
                             </div>
                             <!-- card  -->
-                            <div class="p-7 text-center bg-gray-200 space-y-2 border border-gray-300">
+                            <div class="p-2 md:p-7 text-center bg-gray-200 space-y-2 border border-gray-300">
                                 <img src="./images/time.png" class="mx-auto" alt="">
                                 <h3 class="text-dark2 font-semibold">Working Hours</h3>
                                 <p class="text-dark3 text-xs md:text-sm">Mon-Fri: 9AM to 5PM<br>Sunday: 9AM to 1 PM</p>
