Develop Footer section with responsive using tailwind

--- a/index.html
+++ b/index.html
@@ -435,6 +435,54 @@
         </section>
     </main>
 
+    <!-- footer section -->
+    <footer class="mt-28 bg-dark1 py-24 text-dark5 px-5 lg:px-0">
+        <div class="max-w-[1170px] mx-auto">
+            <div class="grid grid-cols-1 gap-y-10  md:grid-cols-[repeat(4,20%)] justify-between">
+                <!-- part 1  -->
+                <div>
+                    <div class="flex items-center mb-8">
+                        <img src="./images/logo.png" alt="">
+                    </div>
+                    <p class="text-16px font-light">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                </div>
+                <!-- part 2 -->
+                <div>
+                    <h1 class="font-garamond text-2xl lg:text-4xl font-bold text-white mb-8">Usefull Link</h1>
+                    <ul class="space-y-5">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Cases</a></li>
+                        <li><a href="#">Blogs</a></li>
+                        <li><a href="#">Contact us</a></li>
+                    </ul>
+                </div>
+                <!-- part 3 -->
+                <div>
+                    <h1 class="font-garamond text-2xl lg:text-4xl font-bold text-white mb-8">Contact Now</h1>
+                    <div class="text-16px font-light space-y-5">
+                        <p>555 4th 5t NW, Washington
+                            DC 20530, United States</p>
+                        <p>+88 01750 000 000
+                            +88 01750 000 000</p>
+                        <p>info@gmail.com
+                            info@gmail.com</p>
+                    </div>
+                </div>
+                <!-- part 4 -->
+                <div>
+                    <h1 class="font-garamond text-2xl lg:text-4xl font-bold text-white mb-8">Subscribe</h1>
+                    <div class="space-y-4">
+                        <p class="text-16px font-light">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
+                        <form action="#" class="flex">
+                            <input type="email" name="email" placeholder="Email Address" class="p-4 rounded-tl-md rounded-bl-md w-full">
+                            <button class="p-4 bg-primary rounded-md -ml-1"><i class="fa-regular fa-paper-plane text-2xl"></i></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- flowbite js  -->
